--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon clase_6/src/app.js"
+    "start": "nodemon clase_10/src/app.js",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,scss,hbd}\""
   },
   "author": "confaa",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "express-handlebars": "^7.1.2",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.1",
+    "socket.io": "^4.7.2"
   }
 }
